fix(design): spacing for statement

--- a/_sass/layout.sass
+++ b/_sass/layout.sass
@@ -40,6 +40,8 @@ footer.page-footer
     line-height: 2
     @include respond-to(handhelds)
       font-size: 1rem
+  #statement
+    margin: 5em 0
 
 .code-of-conduct
   font-weight: 300
